--- a/sass/utilities/_media-queries.scss
+++ b/sass/utilities/_media-queries.scss
@@ -34,7 +34,8 @@
     }
   }
 
-  .music__container {
+  .music__container,
+  .animation__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
