--- a/sass/base/typography/_headings.scss
+++ b/sass/base/typography/_headings.scss
@@ -9,6 +9,7 @@ h2 {
 
 h3 {
 	font-size: 2rem;
+	color: lighten($color-blue-3, 40);     
 }
 
 h4 {
@@ -16,7 +17,7 @@ h4 {
 }
 
 h5 {
-	font-size: 1.4rem;
+	font-size: 1.4rem; 
 }
 
 h6 {
