--- a/sass/components/content/_portfolio.scss
+++ b/sass/components/content/_portfolio.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   background-attachment: fixed;
-  font-family: "Sen", sans-serif;
   position: relative;
   padding: 1rem 0 0;
   box-shadow: inset 0 0 20px 6px #000; 
@@ -48,56 +47,21 @@
   }
 }
 
-// // Main nav section
-// .main-nav {
-//   display: flex;
-//   width: 100%;
-//   position: fixed;
-//   z-index: 500;
-// }
-
-// .main-nav__area {
-//   font-family: "Oxanium", cursive;
-//   margin: auto;
-// }
-
-// .main-nav__links {
-//   display: flex;
-//   margin: 0 1.1rem 1.1rem;
-// }
-
-// .main-nav__link {
-//   margin: 0 1rem;
-//   list-style: none;
-//   z-index: 2;
-
-//   a {
-//     text-decoration: none;
-//     font-size: 0.9rem;
-//     color: #e1c29e;
-//     transition: all 200ms ease;
-
-//     &:hover {
-//       color: #fff6ec;
-//     }
-//   }
-// }
-
 // Portrait section
 .portrait {
   width: 100%;
   margin: 0 0 0.6rem;
+  position: relative;
 
   img {
-    width: 84%;
-    max-width: 28rem;
+    position: absolute;
+    width: 28rem;
     display: block;
     margin: 0 auto;
     border-radius: 50%;
     position: relative;
     border: .125rem solid #9c7244;
     box-shadow: 0 0 20px #000;
-
 
     &::before {
       content: "";
@@ -121,7 +85,8 @@
   align-items: center;
   margin: 2rem 0 0;
 
-  h3 {
+  h3.section-heading {
+    font-size: 2rem;
     margin-bottom: 1rem;
     z-index: 2;
     color: #9c7244;
@@ -180,21 +145,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 94%;
   margin: -1rem auto 1rem;
-  padding: 1.4rem;
+  padding: 1rem;
   color: #fff;
 
-  h3 {
+  h3.section-heading {
+    font-size: 2rem;
     margin-bottom: 1.2rem;
     z-index: 2;
     color: #9c7244;
     text-shadow: 0 0 2px #000;
   }
 }
+
 .about-section__about-info {
   max-width: 26rem;
-  width: 100%;
+  //width: 100%;
   line-height: 2.4rem;
   z-index: 2;
 
@@ -213,7 +179,8 @@
   align-items: center;
   justify-content: center;
 
-  h3 {
+  h3.section-heading {
+    font-size: 2.0rem;
     margin-bottom: 1rem;
     z-index: 2;
     color: #9c7244;
@@ -243,8 +210,9 @@
 
   h3 {
     text-align: center;
-    margin: .4rem 0 1rem;
-    font-size: 1.3rem;
+    color: #9c7244;
+    font-size: 1.6rem;
+    margin: 1.6rem 0 2rem;
   }
 
   p {
@@ -255,8 +223,9 @@
 
 .project-section__btns {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
-  width: 94%;
+  width: auto;;
 }
 
 .project-section__btn {
@@ -304,27 +273,49 @@
 
 .project-section__img {
   width: 100%;
+  display: inline-block;
+  margin: 2rem 0;
 
   img {
     //border: 1px solid rgba(255, 255, 255, .4);
     width: 88%;
     display: block;
-    margin: .8rem auto;
+    margin: .8rem auto;  
   }
 }
 
 .credentials {
-	margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h3.section-heading {
+    font-size: 2.0rem;
+    margin-bottom: 1rem;
+    z-index: 2;
+    color: #9c7244;
+    text-shadow: 0 0 2px #000;
+  }
 }
 
 .certificate {
 	transition: all .4s ease-out;
-	transform: scale(.8);
+	transform: scale(.7);
+  margin: -1rem 0;
 }
 
 .certificate:hover {
-	transform: scale(1);
+	transform: scale(.9);
 }  
+
+.resume {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: -4rem 0;
+}
 
 // Footer section 
 .footer-section__footer-info {
@@ -337,10 +328,6 @@
 $primary-color: #66828e;
 $secondary-color: #fff6ec;
 $dark-color: #232425;
-
-// @mixin transition {
-//   transition: all 400ms ease-out;
-// }
 
 // Media query mixins
 @mixin xs {
@@ -376,11 +363,6 @@ $dark-color: #232425;
 // Cell phones portrait
 @include xs {
 
-  .project-section__btns {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-  }
 }
 
 // Cell phones landscape
@@ -398,11 +380,23 @@ $dark-color: #232425;
   
   .large-layout {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .portrait { 
-    margin: 0;
     grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    height: 100%;
+    position: relative;
+
+    img {
+      width: 90%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 40rem;
+    }
   }
 
   .contact-section {
@@ -445,13 +439,10 @@ $dark-color: #232425;
 // Extra large monitors
 @include xl {
 
-  .project-section__btns {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-  }
-
-  .project-section__btn {
-    margin: .6rem .8rem;
+  .certificates {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    align-items: center;
   }
 }
