--- a/sass/components/widgets/_widgets.scss
+++ b/sass/components/widgets/_widgets.scss
@@ -1,3 +1,72 @@
+// Widgets to be displayed on the 404 page
+.widget {
+  margin: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 26rem;
+  max-width: 32rem;
+  padding: 0 1rem;
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 1rem;
+    width: 100%;
+
+    li:first-child {
+      border-top: 1px solid gray;
+    }
+
+    li {
+      border-bottom: 1px solid gray;
+      width: 100%;
+      display: inline-block;
+      padding: .8rem 0;
+
+      &.recentcomments {
+        color: lighten($color-gray-light, 40);
+      }
+    }
+  }
+}
+
+// YARPP styles
+.widget_yarpp_widget {
+
+  h3 {
+    color: #fff;
+    text-align: center;
+  }
+
+  .yarpp-thumbnail .yarpp-thumbnail-title {
+    text-align: center;
+  }
+}
+
+.yarpp { 
+
+  & h3 {
+    color: #fff;
+    text-align: center;
+  }
+}
+
+.yarpp-template-thumbnails {
+  padding: 1rem 0;
+
+  h3 {
+    text-align: center;
+    color: #fff;
+  }
+
+  .yarpp-thumbnail .yarpp-thumbnail-title {
+    text-align: center;
+  }
+}
+
 .sidebar-1 {
   display: flex;
   flex-direction: column;
@@ -28,11 +97,6 @@
       align-items: flex-start;
       padding: 0 1rem;
       width: 100%;
-
-      // a {
-      //   display: inline-block;
-      //   margin-bottom: .6rem;
-      // }
 
       li:first-child {
         border-top: 1px solid gray;
@@ -68,18 +132,19 @@
     margin: 0 0 4rem;
     padding: 0 1rem;
     width: 26rem;
-
+    
     &-title {
 			color: #000;
+      //text-align: center;
     }
 
     ul {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding: 0 1rem;
+      padding: 0 1rem; 
     }
-  }
+  } 
 }
 
 // Search form styles 
