Just doing some finishing touches on the site

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -235,12 +235,24 @@ figcaption {
   }
 
   .updated {
-    display: none;
+    display: none; 
   }
 }
 
 .entry-content {
 
+  ul li {
+    color: #fff;
+  }
+
+  ul li::before {
+    content: "\2022";  /* \2022 is the CSS Code/unicode for a bullet */
+    color: $color-purple-1;
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+  }
 }
 
 .entry-button {
